--- a/template/index.html
+++ b/template/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>App ka ng Ina Ka</title>
 </head>
 <body>
 
