--- a/template/index.html
+++ b/template/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
     <code>This is a code</code>
+    <form>
+        <label for="first_name">First name</label>
+        <input type="text" id="first_name" name="first_name" required>
+    </form>
 </body>
 </html>
