--- a/template/index.html
+++ b/template/index.html
@@ -7,8 +7,10 @@
 <body>
     <code>This is a code</code>
     <form>
-        <label for="first_name">First name</label>
-        <input type="text" id="first_name" name="first_name" required>
+        <div>
+            <label for="first_name">First name</label>
+            <input type="text" id="first_name" name="first_name" required>
+        </div>
     </form>
 </body>
 </html>
