--- a/template/index.html
+++ b/template/index.html
@@ -8,8 +8,11 @@
     <code>This is a code</code>
     <form>
         <div>
-            <label for="first_name">First name</label>
-            <input type="text" id="first_name" name="first_name" required>
+            <label for="pers_name">First name</label>
+            <input type="text" id="pers_name" name="first_name" required>
+        </div><div>
+            <label for="lust_name">Lust name</label>
+            <input type="text" id="lust_name" name="first_name" required>
         </div>
     </form>
 </body>
