--- a/template/index.html
+++ b/template/index.html
@@ -12,7 +12,7 @@
             <input type="text" id="pers_name" name="first_name" required>
         </div><div>
             <label for="lust_name">Lust name</label>
-            <input type="text" id="lust_name" name="first_name" required>
+            <input type="text" id="lust_name" name="lust_name" required>
         </div>
     </form>
 </body>
