--- a/template/index.html
+++ b/template/index.html
@@ -10,9 +10,14 @@
         <div>
             <label for="pers_name">First name</label>
             <input type="text" id="pers_name" name="first_name" required>
-        </div><div>
+        </div>
+        <div>
             <label for="lust_name">Lust name</label>
             <input type="text" id="lust_name" name="lust_name" required>
+        </div>
+        <div>
+            <label for="email">Email</label>
+            <input type="text" id="email" name="email" required>
         </div>
     </form>
 </body>
