--- a/template/index.html
+++ b/template/index.html
@@ -19,6 +19,10 @@
             <label for="email">Email</label>
             <input type="text" id="email" name="email" required>
         </div>
+        <div>
+            <label for="date">Abillable istart Date</label>
+            <input type="date" id="date" name="date" required>
+        </div>
     </form>
 </body>
 </html>
