--- a/template/index.html
+++ b/template/index.html
@@ -23,6 +23,10 @@
             <label for="date">Abillable istart Date</label>
             <input type="date" id="date" name="date" required>
         </div>
+        <div>
+            <input type="radio" id="employed" name="employed" required>
+            <label for="employed">May tarbaho, hindi tambay</label>
+        </div>
     </form>
 </body>
 </html>
