--- a/template/index.html
+++ b/template/index.html
@@ -24,8 +24,12 @@
             <input type="date" id="date" name="date" required>
         </div>
         <div>
+            <label>Trabaho sa kasalukuyang panahon:</label>
+            <br>
             <input type="radio" id="employed" name="employed" required>
             <label for="employed">May tarbaho, hindi tambay</label>
+            <input type="radio" id="unemployed" name="unemployed" required>
+            <label for="unemployed">Wala kang trabahong hayup ka</label>
         </div>
     </form>
 </body>
