--- a/template/index.html
+++ b/template/index.html
@@ -28,8 +28,13 @@
             <br>
             <input type="radio" id="employed" name="employed" required>
             <label for="employed">May tarbaho, hindi tambay</label>
+
             <input type="radio" id="unemployed" name="unemployed" required>
             <label for="unemployed">Wala kang trabahong hayup ka</label>
+
+            <input type="radio" id="negosyante" name="negosyante" required>
+            <label for="negosyante">Negosyante ako, bakit??</label>
+
         </div>
     </form>
 </body>
