--- a/template/index.html
+++ b/template/index.html
@@ -27,10 +27,10 @@
             <label>Trabaho sa kasalukuyang panahon:</label>
             <br>
             <input type="radio" id="employed" name="employed" required>
-            <label for="employed">May tarbaho, hindi tambay</label>
+            <label for="employed">May tarbaho ako, hindi tambay</label>
 
             <input type="radio" id="unemployed" name="unemployed" required>
-            <label for="unemployed">Wala kang trabahong hayup ka</label>
+            <label for="unemployed">Wala akong trabaho, palamunin...in short</label>
 
             <input type="radio" id="negosyante" name="negosyante" required>
             <label for="negosyante">Negosyante ako, bakit??</label>
