--- a/template/index.html
+++ b/template/index.html
@@ -35,6 +35,9 @@
             <input type="radio" id="negosyante" name="negosyante" required>
             <label for="negosyante">Negosyante ako, bakit??</label>
 
+            <input type="radio" id="estudyante" name="Estudyante/Mag-aaral" required>
+            <label for="estudyante">Estudyante, umaasa sa baon</label>
+
         </div>
     </form>
 </body>
