--- a/template/index.html
+++ b/template/index.html
@@ -24,19 +24,21 @@
             <input type="date" id="date" name="date" required>
         </div>
         <div>
-            <label>Trabaho sa kasalukuyang panahon:</label>
-            <br>
-            <input type="radio" id="employed" name="employed" required>
-            <label for="employed">May tarbaho ako, hindi tambay</label>
+            <div id="occupation">
+                <label>Trabaho sa kasalukuyang panahon:</label>
+                <br>
+                <input type="radio" id="employed" name="occupation" required>
+                <label for="employed">May tarbaho ako, hindi tambay</label>
 
-            <input type="radio" id="unemployed" name="unemployed" required>
-            <label for="unemployed">Wala akong trabaho, palamunin...in short</label>
+                <input type="radio" id="unemployed" name="occupation" required>
+                <label for="unemployed">Wala akong trabaho, palamunin...in short</label>
 
-            <input type="radio" id="negosyante" name="negosyante" required>
-            <label for="negosyante">Negosyante ako, bakit??</label>
+                <input type="radio" id="negosyante" name="occupation" required>
+                <label for="negosyante">Negosyante ako, bakit??</label>
 
-            <input type="radio" id="estudyante" name="Estudyante/Mag-aaral" required>
-            <label for="estudyante">Estudyante, umaasa sa baon</label>
+                <input type="radio" id="estudyante" name="occupation" required>
+                <label for="estudyante">Estudyante, umaasa sa baon</label>
+            </div>
 
         </div>
     </form>
