--- a/template/index.html
+++ b/template/index.html
@@ -39,8 +39,8 @@
                 <input type="radio" id="estudyante" name="occupation" required>
                 <label for="estudyante">Estudyante, umaasa sa baon</label>
             </div>
-
         </div>
+        <button type="button">Submit mo na</button>
     </form>
 </body>
 </html>
