--- a/template/index.html
+++ b/template/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>App ka ng Ina Ka</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
     <code>This is a code</code>
