--- a/template/index.html
+++ b/template/index.html
@@ -2,46 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>App ka ng Ina Ka</title>
+    <title">App ka ng Ina Ka</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <code>This is a code</code>
-    <form>
-        <div>
-            <label for="pers_name">First name</label>
-            <input type="text" id="pers_name" name="first_name" required>
-        </div>
-        <div>
-            <label for="lust_name">Lust name</label>
-            <input type="text" id="lust_name" name="lust_name" required>
-        </div>
-        <div>
-            <label for="email">Email</label>
-            <input type="text" id="email" name="email" required>
-        </div>
-        <div>
-            <label for="date">Abillable istart Date</label>
-            <input type="date" id="date" name="date" required>
-        </div>
-        <div>
-            <div id="occupation">
-                <label>Trabaho sa kasalukuyang panahon:</label>
-                <br>
-                <input type="radio" id="employed" name="occupation" required>
-                <label for="employed">May tarbaho ako, hindi tambay</label>
-
-                <input type="radio" id="unemployed" name="occupation" required>
-                <label for="unemployed">Wala akong trabaho, palamunin...in short</label>
-
-                <input type="radio" id="negosyante" name="occupation" required>
-                <label for="negosyante">Negosyante ako, bakit??</label>
-
-                <input type="radio" id="estudyante" name="occupation" required>
-                <label for="estudyante">Estudyante, umaasa sa baon</label>
+    <div class="container">
+        <h1 class="mt-4 mb-4">App Ka Ng Ina Ka</h1>
+        <code>This is a code</code>
+        <form>
+            <div class="form-group mb-4">
+                <label for="pers_name">First name</label>
+                <input type="text" id="pers_name" name="first_name" required>
             </div>
-        </div>
-        <button type="button">Submit mo na</button>
-    </form>
+            <div class="form-group mb-4">
+                <label for="lust_name">Lust name</label>
+                <input type="text" id="lust_name" name="lust_name" required>
+            </div>
+            <div class="form-group mb-4">
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email" required>
+            </div>
+            <div class="form-group mb-4">
+                <label for="date">Abillable istart Date</label>
+                <input type="date" id="date" name="date" required>
+            </div>
+            <div class="form-group mb-4">
+                <div id="occupation">
+                    <label>Trabaho sa kasalukuyang panahon:</label>
+                    <br>
+                    <input type="radio" id="employed" name="occupation" required>
+                    <label for="employed">May tarbaho ako, hindi tambay</label>
+
+                    <input type="radio" id="unemployed" name="occupation" required>
+                    <label for="unemployed">Wala akong trabaho, palamunin...in short</label>
+
+                    <input type="radio" id="negosyante" name="occupation" required>
+                    <label for="negosyante">Negosyante ako, bakit??</label>
+
+                    <input type="radio" id="estudyante" name="occupation" required>
+                    <label for="estudyante">Estudyante, umaasa sa baon</label>
+                </div>
+            </div>
+            <button type="button">Submit mo na</button>
+        </form>
+    </div>
 </body>
 </html>
