--- a/template/index.html
+++ b/template/index.html
@@ -8,23 +8,23 @@
 <body>
     <div class="container">
         <h1 class="mt-4 mb-4">App Ka Ng Ina Ka</h1>
-        <code>This is a code</code>
+        <code class="mt-4 mb-4">This is a code</code>
         <form>
             <div class="form-group mb-4">
                 <label for="pers_name">First name</label>
-                <input type="text" id="pers_name" name="first_name" required>
+                <input class="form-control" type="text" id="pers_name" name="first_name" required>
             </div>
             <div class="form-group mb-4">
                 <label for="lust_name">Lust name</label>
-                <input type="text" id="lust_name" name="lust_name" required>
+                <input class="form-control" type="text" id="lust_name" name="lust_name" required>
             </div>
             <div class="form-group mb-4">
                 <label for="email">Email</label>
-                <input type="text" id="email" name="email" required>
+                <input class="form-control" type="text" id="email" name="email" required>
             </div>
             <div class="form-group mb-4">
                 <label for="date">Abillable istart Date</label>
-                <input type="date" id="date" name="date" required>
+                <input class="form-control" type="date" id="date" name="date" required>
             </div>
             <div class="form-group mb-4">
                 <div id="occupation">
