--- a/template/index.html
+++ b/template/index.html
@@ -27,20 +27,20 @@
                 <input class="form-control" type="date" id="date" name="date" required>
             </div>
             <div class="form-group mb-4">
-                <div id="occupation">
+                <div class="btn-group-vertical" id="occupation">
                     <label>Trabaho sa kasalukuyang panahon:</label>
                     <br>
-                    <input type="radio" id="employed" name="occupation" required>
-                    <label for="employed">May tarbaho ako, hindi tambay</label>
+                    <input class="btn-check form-control" type="radio" id="employed" name="occupation" required>
+                    <label class="btn btn-outline-secondary" for="employed">May tarbaho ako, hindi tambay</label>
 
-                    <input type="radio" id="unemployed" name="occupation" required>
-                    <label for="unemployed">Wala akong trabaho, palamunin...in short</label>
+                    <input class="btn-check form-control" type="radio" id="unemployed" name="occupation" required>
+                    <label class="btn btn-outline-secondary" for="unemployed">Wala akong trabaho, palamunin...in short</label>
 
-                    <input type="radio" id="negosyante" name="occupation" required>
-                    <label for="negosyante">Negosyante ako, bakit??</label>
+                    <input class="btn-check form-control" type="radio" id="negosyante" name="occupation" required>
+                    <label class="btn btn-outline-secondary" for="negosyante">Negosyante ako, bakit??</label>
 
-                    <input type="radio" id="estudyante" name="occupation" required>
-                    <label for="estudyante">Estudyante, umaasa sa baon</label>
+                    <input class="btn-check form-control" type="radio" id="estudyante" name="occupation" required>
+                    <label class="btn btn-outline-secondary" for="estudyante">Estudyante, umaasa sa baon</label>
                 </div>
             </div>
             <button type="button">Submit mo na</button>
