--- a/template/index.html
+++ b/template/index.html
@@ -43,7 +43,7 @@
                     <label class="btn btn-outline-secondary" for="estudyante">Estudyante, umaasa sa baon</label>
                 </div>
             </div>
-            <button type="button">Submit mo na</button>
+            <button class="btn btn-primary mb-4" type="button">Submit mo na</button>
         </form>
     </div>
 </body>
