--- a/template/index.html
+++ b/template/index.html
@@ -46,5 +46,7 @@
             <button class="btn btn-primary mb-4" type="button">Submit mo na</button>
         </form>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
