--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h1 class="mt-4 mb-4">App Ka Ng Ina Ka</h1>
         <code class="mt-4 mb-4">This is a code</code>
-        <form>
+        <form method="post">
             <div class="form-group mb-4">
                 <label for="pers_name">First name</label>
                 <input class="form-control" type="text" id="pers_name" name="first_name" required>
