--- a/template/index.html
+++ b/template/index.html
@@ -30,16 +30,16 @@
                 <div class="btn-group-vertical" id="occupation">
                     <label>Trabaho sa kasalukuyang panahon:</label>
                     <br>
-                    <input class="btn-check form-control" type="radio" id="employed" name="occupation" required>
+                    <input class="btn-check form-control" type="radio" id="employed" name="occupation" value="May tarbaho ako, hindi tambay" required>
                     <label class="btn btn-outline-secondary" for="employed">May tarbaho ako, hindi tambay</label>
 
-                    <input class="btn-check form-control" type="radio" id="unemployed" name="occupation" required>
+                    <input class="btn-check form-control" type="radio" id="unemployed" name="occupation" value="Wala akong trabaho, palamunin...in short" required>
                     <label class="btn btn-outline-secondary" for="unemployed">Wala akong trabaho, palamunin...in short</label>
 
-                    <input class="btn-check form-control" type="radio" id="negosyante" name="occupation" required>
+                    <input class="btn-check form-control" type="radio" id="negosyante" name="occupation" value="Negosyante ako, bakit??" required>
                     <label class="btn btn-outline-secondary" for="negosyante">Negosyante ako, bakit??</label>
 
-                    <input class="btn-check form-control" type="radio" id="estudyante" name="occupation" required>
+                    <input class="btn-check form-control" type="radio" id="estudyante" name="occupation" value="Estudyante, umaasa sa baon" required>
                     <label class="btn btn-outline-secondary" for="estudyante">Estudyante, umaasa sa baon</label>
                 </div>
             </div>
